--- a/aip.tex
+++ b/aip.tex
@@ -624,7 +624,7 @@ By construction, each row of $\collapse{A}$ is a row of $A$, and so the constrai
 \daniel[inline]{What do you guys think about including an example (picture) that describes the differences between the feasible set for $\LP(A, \vv{u})$ and $\LP(\collapse{A}, \collapse{\vv{u}})$?  In the few examples I've looked at, it seems like the optimal set of these programs is the same.  This probably isn't always true, but does someone know an example?  If so, it might be a good candidate for a picture.}
 \pedro[inline]{
    I like that idea.
-   Examples where the optimal sets are different are not hard to find (that is, they are not very rare).
+   I've searched for random examples of $3 \times 3$ matrices (so we can picture not only the feasible sets, but also the Newton polyhedra) for which the optimal sets are different, and found that they are not super rare.
    Below are pictures of a couple of examples.
    In the first, $A=\left(\begin{smallmatrix}9&4&2\\ 0&5&0\\ 7&3&7\end{smallmatrix}\right)$; in the second, $A=\left(\begin{smallmatrix}8&4&4\\ 6&4&9\\ 7&9&4\end{smallmatrix}\right)$; $\vv{u} = (1,1,1)$ for both.
    The feasible set for $\LP(A, \vv{u})$ is shown in blue, and is properly contained in the feasible set for $\LP(\collapse{A}, \collapse{\vv{u}})$, shown in yellow.
