--- a/aip.tex
+++ b/aip.tex
@@ -166,10 +166,14 @@ Next, suppose that the columns of $M$ corresponding to the nonzero coordinates o
    And maybe we could move Newton polyhedra here to this Preliminaries section, as a subsection. 
 
    Let me know your thoughts.
-
+}
 \daniel[inline]{I removed the stuff on \emph{successors}.  I agree the monomial matrix stuff should appear immediately before the definition of Newton polyhedra.  About moving Newton stuff to the preliminaries:  This seems reasonable, but I would at least want to emphasize (in the prose) that collapsing seems to be a new idea (unlike the rest of the preliminaries, which is much more established).  Collapsing seems to first appear in my paper with Emily;  I searched for a while, and couldn't find that construction anywhere else.}
 
 \emily[inline]{Maybe we should introduce collapsing right before it is used, to emphasize that it is a new idea?}
+\pedro[inline]{
+   I like this idea.
+   We could just put monomial matrices and the basics of Newton polyhedra here, and postpone collapsing.
+   We can gather the results on collapsing at the end of Section~4 or, better, have a whole section on collapsing.
 }
 
 
@@ -193,6 +197,7 @@ In this article,  we say that two integer programs are \emph{equal} if their obj
    Maybe include a subsection on multinomial coefficients, including Dickson's Theorem?
 \daniel[inline]{This is OK with me, but we will need to update \Cref{aip: D} accordingly.}
 \emily[inline]{This sounds good to me.}
+\pedro[inline]{Will work on it soon.}
 }
 
 
